--- a/Css/translated.css
+++ b/Css/translated.css
@@ -238,24 +238,24 @@ main {
     width: 3rem; } }
 
 .top__image--home {
-  background-image: url(../Images/Header-home.jpg);
-  background-size: cover;
-  background-position: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-image: url(../Images/Header-home.jpg);
+  background-size: cover;
+  background-position: center;
   width: 100%;
   height: 55rem; }
 
 .nosotros {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-around;
+  flex-wrap: wrap;
   align-items: center;
   gap: 1em;
   margin: 5em 0; }
-  .nosotros__text {
+  .nosotros__text, .restaurante__text {
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -265,17 +265,11 @@ main {
 .restaurante {
   display: flex;
   flex-direction: row-reverse;
-  flex-wrap: wrap;
   justify-content: space-around;
+  flex-wrap: wrap;
   align-items: center;
   gap: 1em;
   margin: 5em 0; }
-  .restaurante__text {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    height: 100%;
-    width: 34%; }
   .restaurante .container__carousel {
     height: 36rem;
     width: 54rem; }
@@ -333,7 +327,7 @@ main {
     box-shadow: 0px 0px 10px #54585A; }
 
 @media (max-width: 600px) {
-  .nosotros__text {
+  .nosotros__text, .restaurante__text {
     text-align: center;
     height: 100%;
     width: 100%;
