--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,19 +1,21 @@
 .top__image--home {
+    @include flex (column, center);
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
     background-image:url(../Images/Header-home.jpg);
     background-size: cover;
     background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
     height: 55rem;
 }
 
 .nosotros{
-    display: flex;
-    flex-direction: row;
+    @include flex (row, space-around);
+    // display: flex;
+    // flex-direction: row;
+    // justify-content:space-around;
     flex-wrap: wrap;
-    justify-content:space-around;
     align-items:center;
     gap: 1em;
     margin: 5em 0;
@@ -28,20 +30,22 @@
 }
 
 .restaurante{
-    display: flex;
-    flex-direction: row-reverse;
+    @include flex (row-reverse, space-around);
+    // display: flex;
+    // flex-direction: row-reverse;
+    // justify-content:space-around;
     flex-wrap: wrap;
-    justify-content:space-around;
     align-items:center;
     gap: 1em;
     margin: 5em 0;
 
     &__text{
-        display: flex;
-        flex-direction: column;
-        text-align: left;
-        height: 100%;
-        width: 34%;
+        @extend .nosotros__text;
+        // display: flex;
+        // flex-direction: column;
+        // text-align: left;
+        // height: 100%;
+        // width: 40%;
     }
 
     .container__carousel {
@@ -73,13 +77,13 @@
         }
         
         &__title{
-            color: $primary;
+            color: map-get($colors, primary);
             font-family: $font-title;
         }
         
         &__text{
             text-align: center;
-            color: $base;
+            color: map-get($colors, base);
             font-family: $font-text;
             font-weight: 500;
             font-size: 1.5rem;
@@ -90,7 +94,7 @@
 
 .cards:hover {
     transform: scale(1.1, 1.1);
-    box-shadow: 0px 0px 10px $secondary;
+    box-shadow: 0px 0px 10px map-get($colors, secondary);
 }
 
 .reviews{
@@ -104,7 +108,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: $secondary;
+        background-color: map-get($colors, secondary);
         height: 20rem;
         width: 70rem;
         margin: 5rem auto;
