--- a/Css/translated.css
+++ b/Css/translated.css
@@ -346,3 +346,247 @@ main {
     margin: 1rem; }
   .reviews {
     padding: 1rem; } }
+
+.top__image--room {
+  background-image: url(../Images/habitacion-top-habitaciones.jpg);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 25rem; }
+
+.room {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1em;
+  margin: 5em 0; }
+  .room__text {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    height: 100%;
+    width: 40%; }
+  .room__container__carousel {
+    height: 36rem;
+    width: 54rem; }
+
+.room__reverse {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1em;
+  margin: 5em 0; }
+  .room__reverse__text {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    height: 100%;
+    width: 40%; }
+  .room__reverse__container__carousel {
+    height: 36rem;
+    width: 54rem; }
+
+@media (max-width: 950px) {
+  .room__text {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 1rem; }
+  .room__img {
+    width: 100%;
+    padding: 1rem; }
+  .room__container__carousel {
+    height: auto; }
+  .room__reverse__text {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 1rem; }
+  .room__reverse__img {
+    width: 100%;
+    padding: 1rem; }
+  .room__reverse__container__carousel {
+    height: auto; } }
+
+.top__image--service {
+  background-image: url(../Images/picina-top-servicios.png);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 25rem; }
+
+.service {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1em;
+  margin: 5em 0; }
+  .service__text {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: left;
+    height: 100%;
+    width: 40%; }
+  .service__container__carousel {
+    height: 36rem;
+    width: 54rem; }
+
+.service__reverse {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1em;
+  margin: 5em 0; }
+  .service__reverse__text {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: left;
+    height: 100%;
+    width: 40%; }
+  .service__reverse__container__carousel {
+    height: 36rem;
+    width: 54rem; }
+
+@media (max-width: 950px) {
+  .service__text {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 1rem; }
+  .service__img {
+    width: 100%;
+    padding: 1rem; }
+  .service__container__carousel {
+    height: auto; }
+  .service__reverse__text {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding: 1rem; }
+  .service__reverse__img {
+    width: 100%;
+    padding: 1rem; }
+  .service__reverse__container__carousel {
+    height: auto; } }
+
+.top__image--galery {
+  background-image: url(../Images/Hotel-top-galeria.png);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 25rem; }
+
+.galery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 2rem;
+  justify-items: center;
+  margin: 5rem 10rem; }
+
+@media (max-width: 1100px) {
+  .galery {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 5rem 0;
+    gap: 1rem; } }
+
+@media (max-width: 660px) {
+  .galery {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 5rem 0;
+    gap: 1rem; } }
+
+.top__image--contact {
+  background-image: url(../Images/frontdesk-contacto.png);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 25rem; }
+
+.contact1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  margin: 5rem 0; }
+  .contact1 ul li {
+    text-align: center;
+    margin: 2rem; }
+  .contact1__info {
+    color: black;
+    transition: all .1s linear; }
+
+.contact1__info:hover {
+  color: #F8B500; }
+
+.contact {
+  display: flex;
+  justify-content: center;
+  margin: 5rem; }
+  .contact__form {
+    background-color: #54585A;
+    width: 50rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 15px; }
+    .contact__form__data {
+      text-align: left;
+      width: 80%;
+      margin: 1rem;
+      border-radius: 5px;
+      border: #54585A; }
+    .contact__form button {
+      width: 30%;
+      border: none;
+      background-color: #F8B500;
+      font-weight: bold; }
+    .contact__form input, .contact__form textarea {
+      color: #111;
+      font-family: "Inter", sans-serif;
+      font-weight: bold;
+      padding: .3rem; }
+
+@media (max-width: 600px) {
+  .contact1 {
+    gap: 1rem;
+    display: flex;
+    flex-direction: column; }
+  .contact {
+    display: flex;
+    justify-content: center;
+    margin: 5rem 1rem; }
+    .contact__form {
+      background-color: #54585A;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem;
+      border-radius: 15px; } }
