--- a/Css/translated.css
+++ b/Css/translated.css
@@ -245,7 +245,7 @@ main {
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 55rem; }
+  height: 100vh; }
 
 .nosotros {
   display: flex;
@@ -327,6 +327,8 @@ main {
     box-shadow: 0px 0px 10px #54585A; }
 
 @media (max-width: 600px) {
+  .top__image--home {
+    height: 85vh; }
   .nosotros__text, .restaurante__text {
     text-align: center;
     height: 100%;
@@ -355,7 +357,7 @@ main {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height: 25rem; }
+  height: 35vh; }
 
 .room {
   display: flex;
@@ -423,7 +425,7 @@ main {
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 25rem; }
+  height: 35vh; }
 
 .service {
   display: flex;
@@ -493,7 +495,8 @@ main {
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 25rem; }
+  height: 35vh;
+  margin-bottom: 5rem; }
 
 .galery {
   display: grid;
@@ -525,7 +528,8 @@ main {
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 25rem; }
+  height: 35vh;
+  margin-bottom: 5rem; }
 
 .contact1 {
   display: flex;
