--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -6,7 +6,8 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 25rem;  
+    height: 35vh;
+    margin-bottom: 5rem;
 }
 
 .contact1{
